# docx-template

./: Cargo.toml  README.md  flake.nix  invoice.docx  snps.json
src/: main.rs
