[package]
name = "docx-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
# docx-rs = "0.4.6"
docx-rs = { git = "https://github.com/bokuweb/docx-rs.git", rev="bffbd468e3af9739792bcf2b35eb373aadba4785" }
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"

